--- a/src/index.html
+++ b/src/index.html
@@ -30,24 +30,24 @@
             </div>
             
             <nav class="flex items-center mr-[90px] gap-4" id="navbar-container">
-                <div class="flex gap-2">
+                <div class="flex gap-2 navbarItem">
                     <img src="./assets/images & svg/Grouping.svg" alt="Grouping">
                     <p >دسته بندی ها</p>
                     <img src="./assets/images & svg/bottom arrow.svg" alt="bottom arrow">
                 </div>
-                <div class="flex gap-2 transition-all duration-200">
+                <div class="flex gap-2 navbarItem">
                     <img src="./assets/images & svg/home.svg" class="opacity-0" alt="" width="18px">
                     <p>صفحه اصلی</p>
                 </div>
-                <div class="flex gap-2">
+                <div class="flex gap-2 navbarItem">
                     <img src="./assets/images & svg/shop-icon-header.svg" class="opacity-0" alt="" width="18px">
                     <a href="./shopPage.html" class="text-[14px]">فروشگاه</a>
                 </div>
-                <div class="flex gap-2">
+                <div class="flex gap-2 navbarItem">
                     <img src="./assets/images & svg/discount-icon-header.svg" class="opacity-0" alt="" width="18px">
                     <p>تخفیف ها و پیشنهادات</p>
                 </div>
-                <div class="flex gap-2">
+                <div class="flex gap-2 navbarItem">
                     <img src="./assets/images & svg/start-icon-header.svg" class="opacity-0" alt="" width="18px">
                     <p>از کجا شروع کنم</p>
                 </div>
