--- a/src/index.html
+++ b/src/index.html
@@ -674,7 +674,8 @@
             <div class=" flex gap-3 justify-center items-center cursor-pointer absolute top-[92%] right-[80px]" id="back-to-top">
                 <p>بازگشت به بالا</p>
                 <img src="./assets/images & svg/back-to-top-icon.svg" alt="">
-            </p>
+                </p>
+            </div>
         </section>
         
         <!-- services section -->
