--- a/src/shopPage.html
+++ b/src/shopPage.html
@@ -386,7 +386,7 @@
         </div>
       </div>
 
-      <div class="w-full mt-10">
+      <div class="w-full mt-10 relative">
         <div
           class="w-full flex justify-between items-center border-b border-b-[#d2d2d2b9] pb-3 md:hidden"
         >
@@ -709,7 +709,7 @@
                   <input
                     type="number"
                     class="input-min font-bold text-[19px]"
-                    value="250.000"
+                    value="۲۵۰.۰۰۰"
                   />
                   <p class="text-[15px]">تومان</p>
                 </div>
@@ -742,7 +742,7 @@
             >
               <div class="w-full flex justify-between items-center">
                 <h2 class="font-bold text-[14px]">دسته بندی کالا ها</h2>
-                <p class="text-[12px] text-[#707070]">15/000کالا</p>
+                <p class="text-[12px] text-[#707070]"> ۱۵/۰۰۰کالا</p>
               </div>
 
               <div class="w-full flex flex-col justify-center items-start mt-6">
@@ -1001,7 +1001,7 @@
                       آجیل و خشکبار و گردو
                     </h1>
                     <div class="hidden md:flex md:gap-1 md:items-center">
-                      <p>4</p>
+                      <p>۴</p>
                       <img
                         src="./assets/images & svg/star-product.svg"
                         width="14px"
@@ -1036,17 +1036,17 @@
                     <div
                       class="mt-12 flex flex-col gap-2 items-center justify-start md:mt-0 md:gap-0"
                     >
-                      <p>250.000 تومان</p>
+                      <p>۲۵۰.۰۰۰ تومان</p>
                       <div class="flex items-center gap-2">
                         <p
                           class="text-[#23232367] text-[10px] line-through md:text-[11px]"
                         >
-                          350.000
+                        ۳۵۰.۰۰۰
                         </p>
                         <div
                           class="bg-[#EF4056] text-white text-[10px] px-2 rounded-full flex justify-center items-center"
                         >
-                          25%
+                        ۲۵%
                         </div>
                       </div>
                     </div>
@@ -1056,7 +1056,7 @@
                   class="h-full py-6 flex flex-col justify-center items-center gap-12 md:gap-0 md:py-0 md:hidden"
                 >
                   <div class="flex gap-1 items-center mt-3 md:mt-0">
-                    <p class="text-[11px]">4</p>
+                    <p class="text-[11px]">۴</p>
                     <img
                       src="./assets/images & svg/star-product.svg"
                       width="10px"
@@ -1099,7 +1099,7 @@
                       آجیل و خشکبار و گردو
                     </h1>
                     <div class="hidden md:flex md:gap-1 md:items-center">
-                      <p>4</p>
+                      <p>۴</p>
                       <img
                         src="./assets/images & svg/star-product.svg"
                         width="14px"
@@ -1134,17 +1134,17 @@
                     <div
                       class="mt-12 flex flex-col gap-2 items-center justify-start md:mt-0 md:gap-0"
                     >
-                      <p>250.000 تومان</p>
+                      <p>۲۵۰.۰۰۰ تومان</p>
                       <div class="flex items-center gap-2">
                         <p
                           class="text-[#23232367] text-[10px] line-through md:text-[11px]"
                         >
-                          350.000
+                        ۳۵۰.۰۰۰
                         </p>
                         <div
                           class="bg-[#EF4056] text-white text-[10px] px-2 rounded-full flex justify-center items-center"
                         >
-                          25%
+                        ۲۵%
                         </div>
                       </div>
                     </div>
@@ -1154,7 +1154,9 @@
                   class="h-full py-6 flex flex-col justify-center items-center gap-12 md:gap-0 md:py-0 md:hidden"
                 >
                   <div class="flex gap-1 items-center mt-3 md:mt-0">
-                    <p class="text-[11px]">4</p>
+                    <p class="text-[11px]">۴
+
+                    </p>
                     <img
                       src="./assets/images & svg/star-product.svg"
                       width="10px"
@@ -1197,7 +1199,7 @@
                       آجیل و خشکبار و گردو
                     </h1>
                     <div class="hidden md:flex md:gap-1 md:items-center">
-                      <p>4</p>
+                      <p>۴</p>
                       <img
                         src="./assets/images & svg/star-product.svg"
                         width="14px"
@@ -1232,17 +1234,17 @@
                     <div
                       class="mt-12 flex flex-col gap-2 items-center justify-start md:mt-0 md:gap-0"
                     >
-                      <p>250.000 تومان</p>
+                      <p>۲۵۰.۰۰۰ تومان</p>
                       <div class="flex items-center gap-2">
                         <p
                           class="text-[#23232367] text-[10px] line-through md:text-[11px]"
                         >
-                          350.000
+                          ۳۵۰.۰۰۰
                         </p>
                         <div
                           class="bg-[#EF4056] text-white text-[10px] px-2 rounded-full flex justify-center items-center"
                         >
-                          25%
+                          ۲۵%
                         </div>
                       </div>
                     </div>
@@ -1295,7 +1297,7 @@
                       آجیل و خشکبار و گردو
                     </h1>
                     <div class="hidden md:flex md:gap-1 md:items-center">
-                      <p>4</p>
+                      <p>۴</p>
                       <img
                         src="./assets/images & svg/star-product.svg"
                         width="14px"
@@ -1330,17 +1332,17 @@
                     <div
                       class="mt-12 flex flex-col gap-2 items-center justify-start md:mt-0 md:gap-0"
                     >
-                      <p>250.000 تومان</p>
+                      <p>۲۵۰.۰۰۰ تومان</p>
                       <div class="flex items-center gap-2">
                         <p
                           class="text-[#23232367] text-[10px] line-through md:text-[11px]"
                         >
-                          350.000
+                          ۳۵۰.۰۰۰
                         </p>
                         <div
                           class="bg-[#EF4056] text-white text-[10px] px-2 rounded-full flex justify-center items-center"
                         >
-                          25%
+                          ۲۵%
                         </div>
                       </div>
                     </div>
@@ -1350,7 +1352,7 @@
                   class="h-full py-6 flex flex-col justify-center items-center gap-12 md:gap-0 md:py-0 md:hidden"
                 >
                   <div class="flex gap-1 items-center mt-3 md:mt-0">
-                    <p class="text-[11px]">4</p>
+                    <p class="text-[11px]">۴</p>
                     <img
                       src="./assets/images & svg/star-product.svg"
                       width="10px"
@@ -1393,7 +1395,7 @@
                       آجیل و خشکبار و گردو
                     </h1>
                     <div class="hidden md:flex md:gap-1 md:items-center">
-                      <p>4</p>
+                      <p>۴</p>
                       <img
                         src="./assets/images & svg/star-product.svg"
                         width="14px"
@@ -1428,17 +1430,17 @@
                     <div
                       class="mt-12 flex flex-col gap-2 items-center justify-start md:mt-0 md:gap-0"
                     >
-                      <p>250.000 تومان</p>
+                      <p>۲۵۰.۰۰۰ تومان</p>
                       <div class="flex items-center gap-2">
                         <p
                           class="text-[#23232367] text-[10px] line-through md:text-[11px]"
                         >
-                          350.000
+                          ۳۵۰.۰۰۰
                         </p>
                         <div
                           class="bg-[#EF4056] text-white text-[10px] px-2 rounded-full flex justify-center items-center"
                         >
-                          25%
+                          ۲۵%
                         </div>
                       </div>
                     </div>
@@ -1448,7 +1450,7 @@
                   class="h-full py-6 flex flex-col justify-center items-center gap-12 md:gap-0 md:py-0 md:hidden"
                 >
                   <div class="flex gap-1 items-center mt-3 md:mt-0">
-                    <p class="text-[11px]">4</p>
+                    <p class="text-[11px]">۴</p>
                     <img
                       src="./assets/images & svg/star-product.svg"
                       width="10px"
@@ -1491,7 +1493,7 @@
                       آجیل و خشکبار و گردو
                     </h1>
                     <div class="hidden md:flex md:gap-1 md:items-center">
-                      <p>4</p>
+                      <p>۴</p>
                       <img
                         src="./assets/images & svg/star-product.svg"
                         width="14px"
@@ -1526,17 +1528,17 @@
                     <div
                       class="mt-12 flex flex-col gap-2 items-center justify-start md:mt-0 md:gap-0"
                     >
-                      <p>250.000 تومان</p>
+                      <p>۲۵۰.۰۰۰ تومان</p>
                       <div class="flex items-center gap-2">
                         <p
                           class="text-[#23232367] text-[10px] line-through md:text-[11px]"
                         >
-                          350.000
+                          ۳۵۰.۰۰۰
                         </p>
                         <div
                           class="bg-[#EF4056] text-white text-[10px] px-2 rounded-full flex justify-center items-center"
                         >
-                          25%
+                          ۲۵%
                         </div>
                       </div>
                     </div>
@@ -1546,7 +1548,7 @@
                   class="h-full py-6 flex flex-col justify-center items-center gap-12 md:gap-0 md:py-0 md:hidden"
                 >
                   <div class="flex gap-1 items-center mt-3 md:mt-0">
-                    <p class="text-[11px]">4</p>
+                    <p class="text-[11px]">۴</p>
                     <img
                       src="./assets/images & svg/star-product.svg"
                       width="10px"
@@ -1589,7 +1591,7 @@
                       آجیل و خشکبار و گردو
                     </h1>
                     <div class="hidden md:flex md:gap-1 md:items-center">
-                      <p>4</p>
+                      <p>۴</p>
                       <img
                         src="./assets/images & svg/star-product.svg"
                         width="14px"
@@ -1624,17 +1626,17 @@
                     <div
                       class="mt-12 flex flex-col gap-2 items-center justify-start md:mt-0 md:gap-0"
                     >
-                      <p>250.000 تومان</p>
+                      <p>۲۵۰.۰۰۰ تومان</p>
                       <div class="flex items-center gap-2">
                         <p
                           class="text-[#23232367] text-[10px] line-through md:text-[11px]"
                         >
-                          350.000
+                          ۳۵۰.۰۰۰
                         </p>
                         <div
                           class="bg-[#EF4056] text-white text-[10px] px-2 rounded-full flex justify-center items-center"
                         >
-                          25%
+                          ۲۵%
                         </div>
                       </div>
                     </div>
@@ -1644,7 +1646,7 @@
                   class="h-full py-6 flex flex-col justify-center items-center gap-12 md:gap-0 md:py-0 md:hidden"
                 >
                   <div class="flex gap-1 items-center mt-3 md:mt-0">
-                    <p class="text-[11px]">4</p>
+                    <p class="text-[11px]">۴</p>
                     <img
                       src="./assets/images & svg/star-product.svg"
                       width="10px"
@@ -1687,7 +1689,7 @@
                       آجیل و خشکبار و گردو
                     </h1>
                     <div class="hidden md:flex md:gap-1 md:items-center">
-                      <p>4</p>
+                      <p>۴</p>
                       <img
                         src="./assets/images & svg/star-product.svg"
                         width="14px"
@@ -1722,17 +1724,17 @@
                     <div
                       class="mt-12 flex flex-col gap-2 items-center justify-start md:mt-0 md:gap-0"
                     >
-                      <p>250.000 تومان</p>
+                      <p>۲۵۰.۰۰۰ تومان</p>
                       <div class="flex items-center gap-2">
                         <p
                           class="text-[#23232367] text-[10px] line-through md:text-[11px]"
                         >
-                          350.000
+                          ۳۵۰.۰۰۰
                         </p>
                         <div
                           class="bg-[#EF4056] text-white text-[10px] px-2 rounded-full flex justify-center items-center"
                         >
-                          25%
+                          ۲۵%
                         </div>
                       </div>
                     </div>
@@ -1742,7 +1744,7 @@
                   class="h-full py-6 flex flex-col justify-center items-center gap-12 md:gap-0 md:py-0 md:hidden"
                 >
                   <div class="flex gap-1 items-center mt-3 md:mt-0">
-                    <p class="text-[11px]">4</p>
+                    <p class="text-[11px]">۴</p>
                     <img
                       src="./assets/images & svg/star-product.svg"
                       width="10px"
@@ -1785,7 +1787,7 @@
                       آجیل و خشکبار و گردو
                     </h1>
                     <div class="hidden md:flex md:gap-1 md:items-center">
-                      <p>4</p>
+                      <p>۴</p>
                       <img
                         src="./assets/images & svg/star-product.svg"
                         width="14px"
@@ -1820,17 +1822,17 @@
                     <div
                       class="mt-12 flex flex-col gap-2 items-center justify-start md:mt-0 md:gap-0"
                     >
-                      <p>250.000 تومان</p>
+                      <p>۲۵۰.۰۰۰ تومان</p>
                       <div class="flex items-center gap-2">
                         <p
                           class="text-[#23232367] text-[10px] line-through md:text-[11px]"
                         >
-                          350.000
+                          ۳۵۰.۰۰۰
                         </p>
                         <div
                           class="bg-[#EF4056] text-white text-[10px] px-2 rounded-full flex justify-center items-center"
                         >
-                          25%
+                          ۲۵%
                         </div>
                       </div>
                     </div>
@@ -1840,7 +1842,7 @@
                   class="h-full py-6 flex flex-col justify-center items-center gap-12 md:gap-0 md:py-0 md:hidden"
                 >
                   <div class="flex gap-1 items-center mt-3 md:mt-0">
-                    <p class="text-[11px]">4</p>
+                    <p class="text-[11px]">۴</p>
                     <img
                       src="./assets/images & svg/star-product.svg"
                       width="10px"
@@ -1865,7 +1867,7 @@
         </div>
 
         <div
-          class="bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6 flex-col"
+          class="bg-white md:mt-6 md:w-full px-4 py-3 flex items-center justify-between sm:px-6 flex-col"
         >
           <div class="flex-1 flex items-center justify-between">
             <nav
@@ -1889,13 +1891,13 @@
                 aria-current="page"
                 class="z-10 bg-[#EF4056] text-white relative inline-flex items-center justify-center px-4 py-2 w-[33px] h-[33px] rounded-3xl text-base font-medium"
               >
-                1
+              ۱
               </a>
               <a
                 href="#"
                 class="bg-white text-[#ACACAC] relative inline-flex items-center justify-center px-4 py-2 w-[33px] h-[33px] rounded-3xl text-base font-medium"
               >
-                2
+              ۲
               </a>
               <a
                 href="#"
@@ -1912,7 +1914,7 @@
                 href="#"
                 class="bg-white text-[#ACACAC] relative inline-flex items-center justify-center px-4 py-2 w-[33px] h-[33px] rounded-3xl text-base font-medium"
               >
-                25
+              ۲۵
               </a>
               <a
                 href="#"
@@ -1928,8 +1930,14 @@
             </nav>
           </div>
         </div>
+        <div class=" hidden md:flex md:gap-3 md:justify-center md:items-center md:cursor-pointer md:absolute  md:top-[242vh] md:right-[70px]" id="back-to-top2">
+          <p class="text-[15px]">بازگشت به بالا</p>
+          <img src="./assets/images & svg/back-to-top-icon.svg" class="w-[35px]" alt="">
+          </p>
+        </div>
       </div>
 
+      
       <div
         class="w-full mt-[3.75rem] flex flex-col justify-center items-center gap-6 md:hidden"
       >
