--- a/src/shopPage.html
+++ b/src/shopPage.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header
-      class="w-full shadow shadow-gray-300 px-8 py-2 h-auto flex justify-between items-center header-container"
+      class="w-full shadow shadow-gray-300 px-6 py-1 h-auto flex justify-between items-center header-container"
     >
       <div class="flex items-start justify-center rightColumnHeader">
         <img
@@ -22,16 +22,16 @@
           class="nav-logo hidden"
         />
         <div
-          class="flex w-[66px] h-full items-start justify-start mt-7 mr-16 header-logo-container"
+          class="flex w-[66px] h-full items-start justify-start mt-0 mr-0 md:mt-4  md:mr-16 header-logo-container"
         >
           <img src="./assets/images & svg/logo.svg" alt="logo" />
         </div>
 
         <nav
-          class="flex flex-col items-start h-full mr-16 gap-10"
+          class="flex flex-col items-start h-full mr-16 gap-6"
           id="navbar-container"
         >
-          <div class="flex items-center h-full gap-4 mt-8 list-navbar">
+          <div class="flex items-center h-full gap-4 mt-6 list-navbar">
             <div class="flex gap-2">
               <img src="./assets/images & svg/Grouping.svg" alt="Grouping" />
               <p>دسته بندی ها</p>
@@ -235,7 +235,6 @@
             </select>
           </div>
         </nav>
-        <br />
       </div>
 
       <div class="flex items-center gap-12 ml-9 leftColumnHeader">
@@ -268,7 +267,7 @@
         </div>
         <div class="hidden md:flex md:flex-col md:justify-end md:items-center">
           <div
-            class="w-[130px] h-[36px] flex justify-between items-center px-1 rounded-2xl bg-[#9292921e] mt-7 mb-7"
+            class="w-[130px] h-[36px] flex justify-between items-center px-1 rounded-2xl bg-[#9292921e] mt-5 mb-6"
           >
             <img
               src="./assets/images & svg/profile-shop.png"
@@ -298,9 +297,8 @@
         </div>
 
         <div
-          class="flex flex-col justify-center md:-mt-9 items-center relative basket-icon"
+          class="flex flex-col justify-center md:-mt-12 items-center relative basket-icon"
         >
-          <!-- <img src="./assets/images & svg/shopHeader.svg" class="hidden shopHeader1" alt="" > -->
           <img
             src="./assets/images & svg/basket-icon.svg"
             class="basket-img"
@@ -983,11 +981,13 @@
             <div
               class="flex items-start justify-start border-b border-b-[#a0a0a07a] md:border-l md:border-l-[#a0a0a07a] md:w-[300px] md:h-[410px] md:flex-col md:justify-start md:items-center md:py-1"
             >
+            <a href="./productInfo.html" class="w-full">
               <img
                 src="./assets/images & svg/bg-product-3.png"
                 class="w-[143px] h-[141px] md:w-[282px] md:h-[266px]"
                 alt=""
               />
+            </a>
               <div
                 class="w-full min-h-full px-3 py-1 flex md:p-0 md:block md:px-2"
               >
